--- a/list.html
+++ b/list.html
@@ -8,15 +8,56 @@
 <body>
     <header>
         <img src="./assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <div>
-            Header Div
-        </div>
+        <a href="./login.html" target="_blank">Login</a>
     </header>
     <div>
-        Content Div
+        <ul>
+            <li>
+                <a href="#">List View</a>
+            </li>
+            <li>
+                <a href="#">Map View</a>
+            </li>
+        </ul>
     </div>
-    <footer>
-        Footer Div
+    <a href="./detail.html">
+        <div>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
+            <h3 style="color: blue;"><u>Radisson Blu Hotel</u></h3>
+            <p style="color: blue;"><u>5 Star</u></p>
+            <p style="color: blue;"><u>New Delhi</u></p>
+        </div>
+    </a>
+    <div>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg">
+        <h3>The Lalit New Delhi</h3>
+        <p>4.5 Star</p>
+        <p>New Delhi</p>
+    </div>
+    <div>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg">
+        <h3>Taj Palace</h3>
+        <p>4.0 Star</p>
+        <p>New Delhi</p>
+    </div>
+    <div>
+        <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png">
+        <div>
+            MAP VIEW
+        </div>
+    </div>
+    <footer> &nbsp
+        <div>
+            <a href="./contact.html" target="_blank">Contact Us</a>
+        </div>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><img src="./assests/images/facebook.png" height="20px" width="22px"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./assests/images/instagram.png" height="20px" width="22px"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="./assests/images/twitter.png" height="20px" width="22px"></a>
+        </div>
+        <div>
+            &#169; 2020 ROOM SEARCH PVT. LTD. 
+        </div>
     </footer>
 </body>
 </div>
