--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,12 @@
 </head>
 <div>
 <body> 
-    CONTACT US
+    <form action="./index.html" method="get">
+        Thank you for reaching out!!! <br><br>
+        Please enter your email and we will get back to you.<br><br>
+
+        <input type="text" id="email" name="email" placeholder="Enter your email" autocomplete="off" required><br>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </div>
