--- a/detail.html
+++ b/detail.html
@@ -16,7 +16,20 @@
                 <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
             </div>
 
-            <a href="./payment.html">Book Now</a>
+            <form action="./payment.html" name="userDetails" method="get">
+                <label for="adult">Adults:</label>
+                <input type="number" id="adult" name="adult" min="1" required autocomplete="off"><br>
+                <label for="uname">Name:</label>
+                <input type="text" id="uname" name="uname" required autocomplete="off"><br>
+                <label for="fdate">From Date:</label>
+                <input type="date" id="fdate" name="fdate" required autocomplete="off"><br>
+                <label for="tdate">To Date:</label>
+                <input type="date" id="tdate" name="tdate" required autocomplete="off"><br>
+                <label for="price">Total:</label>
+                <input type="text" id="price" name="price" readonly autocomplete="off"><br>
+                <button type="submit">Book Now</button>
+            </form>
+            
             <h2>Radisson Blu Hotel</h2>
             <p>RATING</p>
             <p>5 Star</p>  
