--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </header>
     <div>
         <div>
-            Search Bar
+            <form>
+                <input type="text" placeholder="City">
+            </form>
         </div>
         <div>
          <a href="./list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" width="300px" height="300px"></a>      
