--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
 <div>
 <body>
     <header>
-        <img src="./assests/images/logo.png" alt="logo" width="150px" height="100px">
+      <a href="./index.html"><img src="./assests/images/logo.png" alt="logo" width="150px" height="100px"></a>  
         <a href="./login.html" target="_blank">Login</a>
     </header>
     <div>
