--- a/login.html
+++ b/login.html
@@ -6,6 +6,12 @@
 </head>
 <div>
 <body> 
-    LOGIN
+   <form action="./index.html" method="get">
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username" placeholder="Enter Username" autocomplete="off" required><br>
+    <label for="password">Password</label>
+    <input type="password" id="passsword" name="password" placeholder="Enter Password" autocomplete="off" required><br>
+    <button type="submit">Login</button>
+   </form>
 </body>
 </div>
