--- a/payment.html
+++ b/payment.html
@@ -3,16 +3,17 @@
     <title>
         Payment
     </title>
+    <link rel="stylesheet" href="./styles/payment.css">
 </head>
 <div>
 <body>
     <header>
-        <a href="./index.html"><img src="./assests/images/logo.png" alt="logo" width="150px" height="100px"></a>  
+        <a href="./index.html"><img src="./assests/images/logo.png" alt="logo" class="logo"></a>  
             <a href="./login.html" target="_blank">Login</a>
     </header>
     <div>
         <div>
-            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" class="radisson">
             <h2>Radisson Blu Hotel</h2>
             <p>#38 of 1,289 hotels in New Delhi</p>
             <p>National Highway 8, New Delhi 110017 India</p>
@@ -31,10 +32,10 @@
         <div>
             <a href="./contact.html" target="_blank">Contact Us</a>
         </div>
-        <div>
-            <a href="https://www.facebook.com/" target="_blank"><img src="./assests/images/facebook.png" height="20px" width="22px"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="./assests/images/instagram.png" height="20px" width="22px"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="./assests/images/twitter.png" height="20px" width="22px"></a>
+        <div id="socialmedia">
+            <a href="https://www.facebook.com/" target="_blank"><img src="./assests/images/facebook.png"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./assests/images/instagram.png"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="./assests/images/twitter.png"></a>
         </div>
         <div>
             &#169; 2020 ROOM SEARCH PVT. LTD. 
