--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <title>
         Index
     </title>
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <div>
 <body>
     <header>
-        <img src="./assests/images/logo.png" alt="logo" width="150px" height="100px">  
+        <img src="./assests/images/logo.png" alt="logo" class="logo">  
             <a href="./login.html" target="_blank">Login</a>
     </header>
     <div>
@@ -16,11 +17,11 @@
                 <input type="text" placeholder="City">
             </form>
         </div>
-        <div>
-         <a href="./list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" width="300px" height="300px"></a>      
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" width="300px" height="300px">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" width="300px" height="300px">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" width="300px" height="300px">
+        <div id="city">
+         <a href="./list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"></a>      
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg">
     </div>
         <a href="#">View more >></a>
     </div>
@@ -28,10 +29,10 @@
         <div>
             <a href="./contact.html" target="_blank">Contact Us</a>
         </div>
-        <div>
-            <a href="https://www.facebook.com/" target="_blank"><img src="./assests/images/facebook.png" height="20px" width="22px"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="./assests/images/instagram.png" height="20px" width="22px"></a>
-            <a href="https://twitter.com/" target="_blank"><img src="./assests/images/twitter.png" height="20px" width="22px"></a>
+        <div id="socialmedia">
+            <a href="https://www.facebook.com/" target="_blank"><img src="./assests/images/facebook.png"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./assests/images/instagram.png"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="./assests/images/twitter.png"></a>
         </div>
         <div>
             &#169; 2020 ROOM SEARCH PVT. LTD. 
