--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     </title>
     <link rel="stylesheet" href="./styles/index.css">
 </head>
-<div>
+<div id="body-div">
 <body>
     <header>
         <img src="./assests/images/logo.png" alt="logo" class="logo">  
             <a href="./login.html" target="_blank">Login</a>
     </header>
-    <div>
-        <div>
+    <div id="content-div">
+        <div id="search-bar">
             <form>
                 <input type="text" placeholder="City">
             </form>
         </div>
-        <div id="city">
+        <div class="city">
          <a href="./list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"></a>      
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg">
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg">
