--- a/loader.html
+++ b/loader.html
@@ -3,9 +3,13 @@
     <title>
         Loader
     </title>
+    <link rel="stylesheet" href="./styles/loader.css">
 </head>
 <div>
 <body> 
-    LOADER
+   <div class="loader">
+       
+   </div>
 </body>
 </div>
+
