--- a/detail.html
+++ b/detail.html
@@ -16,7 +16,7 @@
             <div>
                 <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" class="radisson">
             </div>
-
+        <div class="form-div">
             <form action="./payment.html" name="userDetails" method="get">
                 <label for="adult">Adults:</label>
                 <input type="number" id="adult" name="adult" min="1" required autocomplete="off"><br>
@@ -30,7 +30,9 @@
                 <input type="text" id="price" name="price" readonly autocomplete="off"><br>
                 <button type="submit">Book Now</button>
             </form>
+        </div>
             
+        <div class="desc-div">
             <h2>Radisson Blu Hotel</h2>
             <p>RATING</p>
             <p>5 Star</p>  
@@ -44,6 +46,8 @@
                </ul>
            <h5>DESCRIPTION</h5>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi harum esse perferendis quia? Necessitatibus ad facilis nisi impedit aut repellat vel quae! Corrupti commodi rem dolore, expedita asperiores quisquam cupiditate!</p>
+        </div>
+        
         </div>
     </div>
     <footer> 
