--- a/list.html
+++ b/list.html
@@ -23,20 +23,20 @@
     </div>
     <div id="list-view">
         <a href="./detail.html">
-            <div>
+            <div class="hotel-div">
                 <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
                 <h3 style="color: blue;"><u>Radisson Blu Hotel</u></h3>
                 <p style="color: blue;"><u>5 Star</u></p>
                 <p style="color: blue;"><u>New Delhi</u></p>
             </div>
         </a>
-        <div>
+        <div class="hotel-div">
             <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg">
             <h3>The Lalit New Delhi</h3>
             <p>4.5 Star</p>
             <p>New Delhi</p>
         </div>
-        <div>
+        <div class="hotel-div">
             <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg">
             <h3>Taj Palace</h3>
             <p>4.0 Star</p>
