--- a/detail.html
+++ b/detail.html
@@ -3,13 +3,14 @@
     <title>
         Detail
     </title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/detail.css">
 </head>
 <div>
 <body>
     <header>
         <a href="./index.html"><img src="./assests/images/logo.png" alt="logo" class="logo"></a>  
-            <a href="./login.html" target="_blank">Login</a>
-            <link rel="stylesheet" href="./styles/detail.css">
+            <a href="./login.html" target="_blank" class="login">Login</a>
     </header>
     <div>
         <div>
@@ -50,18 +51,18 @@
         
         </div>
     </div>
-    <footer> 
-        <div>
+    <footer>
+        <div id="contact-div">
             <a href="./contact.html" target="_blank">Contact Us</a>
+        </div>
+        <div id="copyright-div">
+            &#169; 2020 ROOM SEARCH PVT. LTD. 
         </div>
         <div id="socialmedia">
             <a href="https://www.facebook.com/" target="_blank"><img src="./assests/images/facebook.png"></a>
             <a href="https://www.instagram.com/" target="_blank"><img src="./assests/images/instagram.png"></a>
             <a href="https://twitter.com/" target="_blank"><img src="./assests/images/twitter.png"></a>
-        </div>
-        <div>
-            &#169; 2020 ROOM SEARCH PVT. LTD. 
-        </div>
+        </div>  
     </footer>
 </body>
 </div>
