--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         Index
     </title>
     <link rel="stylesheet" href="./styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <div id="body-div">
 <body>
     <header>
-        <img src="./assests/images/logo.png" alt="logo" class="logo">  
-            <a href="./login.html" target="_blank">Login</a>
+            <div>
+                <img src="./assests/images/logo.png" alt="logo" class="logo">  
+            </div> 
+            <div class="login">
+                <a href="./login.html" target="_blank">Login</a>
+            </div>        
     </header>
     <div id="content-div">
         <div id="search-bar">
@@ -23,20 +28,22 @@
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg">
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg">
     </div>
-        <a href="#">View more >></a>
+        <div id="view-div">
+            <a href="#">View more >></a>
+        </div>  
     </div>
     <footer>
-        <div>
+        <div id="contact-div">
             <a href="./contact.html" target="_blank">Contact Us</a>
+        </div>
+        <div id="copyright-div">
+            &#169; 2020 ROOM SEARCH PVT. LTD. 
         </div>
         <div id="socialmedia">
             <a href="https://www.facebook.com/" target="_blank"><img src="./assests/images/facebook.png"></a>
             <a href="https://www.instagram.com/" target="_blank"><img src="./assests/images/instagram.png"></a>
             <a href="https://twitter.com/" target="_blank"><img src="./assests/images/twitter.png"></a>
-        </div>
-        <div>
-            &#169; 2020 ROOM SEARCH PVT. LTD. 
-        </div>
+        </div>  
     </footer>
 </body>
 </div>
