--- a/index.html
+++ b/index.html
@@ -22,12 +22,34 @@
                 <input type="text" placeholder="City">
             </form>
         </div>
-        <div class="city">
-         <a href="./list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg"></a>      
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg">
-    </div>
+        <div class="city-flex">
+         <a href="./list.html">
+            <div class="city">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg">
+                <div class="img-overlay">
+                    <div class="text">Delhi</div>
+                </div>
+            </div>
+        </a> 
+            <div class="city">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg">
+                <div class="img-overlay">
+                    <div class="text">Goa</div>
+                </div>   
+            </div>
+            <div class="city"> 
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg"> 
+                <div class="img-overlay">
+                    <div class="text">Hyderabad</div>
+                </div>
+            </div>
+            <div class="city">   
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg">
+                <div class="img-overlay">
+                    <div class="text">Kolkata</div>
+                </div>  
+            </div>
+        </div>     
         <div id="view-div">
             <a href="#">View more >></a>
         </div>  
