--- a/payment.html
+++ b/payment.html
@@ -12,28 +12,34 @@
         <a href="./index.html"><img src="./assests/images/logo.png" alt="logo" class="logo"></a>  
             <a href="./login.html" target="_blank" class="login">Login</a>
     </header>
-    <div>
-        <div class="radisson-div">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" id="radisson">
-            <h2>Radisson Blu Hotel</h2>
-            <p>#38 of 1,289 hotels in New Delhi</p>
-            <p>National Highway 8, New Delhi 110017 India</p>
+    <div class="content-div">
+        <div class="hotel-info">
+            <div class="radisson-div">
+                <div class="radisson">
+                    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
+                </div>
+                <div class="hotel-desc">
+                    <h2>Radisson Blu Hotel</h2>
+                    <p>#38 of 1,289 hotels in New Delhi</p>
+                    <p>National Highway 8, New Delhi 110017 India</p>
+                </div>            
+            </div>
         </div>
-        <div class="customer-info">
-            <p><b>Name: </b>John Doe</p>
-            <p><b>Number of Adults: </b>2</p>
-            <p><b>Check-in Date: </b>06/06/2020</p>
-            <p><b>Check-out Date: </b>06/06/2020</p>
+        <div class="booking-info">
+            <div class="customer-info">
+                <p><b>Name: </b>John Doe</p>
+                <p><b>Number of Adults: </b>2</p>
+                <p><b>Check-in Date: </b>06/06/2020</p>
+                <p><b>Check-out Date: </b>06/06/2020</p>
+            </div>
             <div class="tariff">
-                <p><b>Tariff Breakdown: </b>Rs.1000 x 2 Adults x 5 Nights</p>
-                <p><b>Total Amount: </b>Rs.10000</p>
-            </div>     
-            
-        </div>
-    <div id="pay">
-        <a href="#">Pay Now</a>
-    </div>
-        
+                    <p><b>Tariff Breakdown: </b>Rs.1000 x 2 Adults x 5 Nights</p>
+                    <p><b>Total Amount: </b>Rs.10000</p>
+            </div>  
+            <div id="pay">
+                <a href="#">Pay Now</a>
+            </div> 
+        </div>             
     </div>
     <footer>
         <div id="contact-div">
