--- a/loader.html
+++ b/loader.html
@@ -3,11 +3,18 @@
     <title>
         Loader
     </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/loader.css">
 </head>
 <div>
 <body> 
-   <div class="loader">
+    <div class="centered">
+        <div class="loader">
+    </div>
+  
        
    </div>
 </body>
