--- a/list.html
+++ b/list.html
@@ -7,15 +7,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/list.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <!-- <script>
-        $(document).ready(function(){
-          $("button").click(function(){
-            $("#map-view").toggle();
-          });
-        });
-      </script> -->
+    <style>
+        .checked {
+            color: orange;
+        }
+    </style>
 </head>
 <div>
 <body>
@@ -92,7 +91,13 @@
                                 <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
                                 <div id="desc">
                                     <h3>Radisson Blu Hotel</h3>
-                                    <p>5 Star</p>
+                                    <p>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    </p>
                                     <p>New Delhi</p>
                                 </div>
                             </div>
@@ -103,7 +108,13 @@
                             <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg">
                             <div id="desc">
                                 <h3>The Lalit New Delhi</h3>
-                                <p>4.5 Star</p>
+                                <p>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star checked"></span>
+                                    <span class="fa fa-star-half-full" style="color: orange;"></span>
+                                    <span class="fa fa-star"></span>
+                                </p>
                                 <p>New Delhi</p>
                             </div>        
                         </div>
@@ -113,7 +124,13 @@
                         <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg">
                         <div id="desc">
                             <h3>Taj Palace</h3>
-                            <p>4.0 Star</p>
+                            <p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span> 
+                            </p>
                             <p>New Delhi</p>
                         </div>           
                     </div>
