--- a/detail.html
+++ b/detail.html
@@ -7,7 +7,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/detail.css">
+    <style>
+        .checked {
+            color: orange;
+        }
+    </style>
 </head>
 <div>
 <body>
@@ -56,9 +62,29 @@
     </header>
     <div>
         <div class="booking-div">
-            <div class="img-div">
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" class="radisson">
-            </div>
+            <div class="slideshow-container">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel"> 
+                   <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg">
+                    </div>
+                </div> 
+                <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    <span class="sr-only"></span>
+                </a>
+                  <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="sr-only"></span>
+                  </a>
+                </div>
+            </div>  
             <div class="form-div">
                 <form action="./payment.html" name="userDetails" method="get">
                    
@@ -96,7 +122,13 @@
         <div class="desc-div">
             <h2>Radisson Blu Hotel</h2>
             <h5>RATING</h5>
-            <p>5 Star</p>  
+            <p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </p>  
             <h5>AMENITIES</h5>
                <ul>
                 <li>Room service</li>
